src/objects/casf1__CAMobileSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>casf1__cacheLifeTimeMinutes__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Cache interval in minutes after which data are considered to be stale and should be updated from the SF</description>
        <inlineHelpText>Cache interval in minutes after which data are considered to be stale and should be updated from the SF</inlineHelpText>
        <label>cacheLifeTimeMinutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>casf1__initialDaysAmount__c</fullName>
        <defaultValue>42</defaultValue>
        <description>Amount of data (limited by number of days) retrieved from SF on initial load</description>
        <inlineHelpText>Amount of data (limited by number of days) retrieved from SF on initial load</inlineHelpText>
        <label>initialDaysAmount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>casf1__initialDaysOffset__c</fullName>
        <defaultValue>7</defaultValue>
        <description>Offset (number of days) from the beginning of &quot;initialDaysAmount&quot; and the current date. In other words: how many backward days from today we have initially.</description>
        <inlineHelpText>Offset (number of days) from the beginning of &quot;initialDaysAmount&quot; and the current date. In other words: how many backward days from today we have initially.</inlineHelpText>
        <label>initialDaysOffset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>casf1__maxVisibleDaysAmount__c</fullName>
        <defaultValue>56</defaultValue>
        <description>Maximum number of days (of accomulated data pool).</description>
        <inlineHelpText>Maximum number of days (of accomulated data pool).</inlineHelpText>
        <label>maxVisibleDaysAmount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>casf1__requestedDaysAmount__c</fullName>
        <defaultValue>42</defaultValue>
        <description>Requested (delta) amount of data retreived from the SF by &quot;show more&quot; request</description>
        <inlineHelpText>Requested (delta) amount of data retreived from the SF by &quot;show more&quot; request</inlineHelpText>
        <label>requestedDaysAmount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CAMobileSettings</label>
</CustomObject>